# Graphics-demo

./: CMakeLists.txt  README.md
lab1-rasterization/: lab1_main.cpp  simple.vert
lab2-textures/: lab2_main.cpp  simple.frag  simple.vert
lab3-camera/: lab3_main.cpp  lab3_main.h
lab4-shading/: background.frag  lab4_main.cpp  shading.frag
lab5-rendertotexture/: lab5_main.cpp
lab5-rendertotexture/shaders/: postFx.frag  shading.frag
lab6-shadowmaps/: lab6_main.cpp  shading.frag
labhelper/: CMakeLists.txt  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  labhelper.cpp  labhelper.h
project/: AudioComponent.cpp  AudioComponent.h  AudioPlayer.cpp  AudioPlayer.h  BehaviourComponent.cpp  BehaviourComponent.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  DebugGUI.h  EnvironmentComponent.cpp  EnvironmentComponent.h  HeightFieldComp.cpp  HeightFieldComp.h  Helicopter.cpp  Helicopter.h  InputHandler.cpp  InputHandler.h  LightComponent.cpp  LightComponent.h  ModelRenderComponent.cpp  ModelRenderComponent.h  ParticleSystem.cpp  ParticleSystem.h  RenderComponent.cpp  RenderComponent.h  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowMap.h  Ship.cpp  Ship.h  avancezlib.cpp  avancezlib.h  background.frag  behaviour.cpp  behaviour.h  camera.cpp  (+36 more)
scenes/: NewShip.mtl  mi-28.mtl
scenes/Ridgecrest/: Copyright-and-attribution-requirement.txt
scenes/tex/: 3.tga
